[gd_scene load_steps=4 format=3 uid="uid://c23l56fi50xdm"]

[ext_resource type="Script" path="res://World/orbs.gd" id="1_jq5em"]
[ext_resource type="Texture2D" uid="uid://ca8o45w2x4gx5" path="res://Assets/Orbs.png" id="2_kojbw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_b3uqj"]
radius = 5.02843

[node name="Orbs" type="CharacterBody2D"]
scale = Vector2(0.5, 0.5)
collision_layer = 8
script = ExtResource("1_jq5em")

[node name="Orb" type="Sprite2D" parent="."]
texture = ExtResource("2_kojbw")
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_b3uqj")

[node name="CollectRange" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectRange"]
shape = SubResource("CircleShape2D_b3uqj")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="SpawnPos" type="Node2D" parent="."]

[connection signal="body_entered" from="CollectRange" to="." method="_on_collect_range_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
